Hallon’s Changelog
==================

NEXT
------------------
- No longer uses autotest as development dependency
- Add Hallon::Base class
- Cleaned up specs to use same mocks everywhere

v0.3.0
------------------
- Don’t use bundler for :spec and :test rake tasks
- Add Error.table
- Add Track subsystem
- Fix spec:cov and spotify:coverage rake tasks

v0.2.1
------------------
- Fix compatibility with v1.8

v0.2.0
------------------
- Alias Session#process_events_on to Session#wait_until
- Have Error.maybe_raise return error code
- Use mockspotify gem (https://rubygems.org/gems/mockspotify) for testing

v0.1.1
------------------
Don’t show the README in the gem description.

v0.1.0
------------------
Initial, first, release! This version is merely made to
have a starting point, a point of reference, for future
releases soon to come.

- Error subsystem is covered (`sp_error_message(error_code)`)
- Image subsystem is complete, however you can only create images
  from links at this moment.
- Session API is partial. Currently you can login, logout, retrieve
  the logged in user and query user relations.
- User API is complete, but you can only create users from your
  currently logged in user (through Session) or from links.

The API is still very young, and I expect a lot of changes to
happen to it, to make the asynchronous nature of libspotify
easier to handle.